[package]
name = "alien-say"
version = "0.1.0"
authors = ["Kammikazzee <kjell.gudrun-schoke@hotmail.com>"]
edition = "2018"
description = "Alienated cowsay"
readme = "README.md"
repository = "https://github.com/Kammikazzee/alien-say"
license-file = "LICENSE"
keywords = ["cli", "alien-say", "cowsay"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.18"
unicode-segmentation = "1.6.0"
